<resources>
    <string name="app_name">Quiz App</string>
    <string name="app_main">Quiz</string>
    <string name="app_history">History</string>
    <string name="app_settings">Settings</string>
    <string name="main">Main</string>
    <string name="questions_amount">Questions amount:</string>
    <string name="category">Category: </string>
    <string name="difficulty">Difficulty:</string>
    <string name="correctAnswers">Correct answers:</string>
    <string name="result">Result:</string>
    <string name="finish">Finish</string>

</resources>