<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ResultActivity"
    android:background="@color/white"
    android:padding="12dp">
    <ImageView
        android:id="@+id/img_result"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:src="@drawable/ic_mask"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="400dp"/>
    <TextView
            android:id="@id/category"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/category"
            style="@style/textStyle"
            app:layout_constraintTop_toBottomOf="@id/img_result"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="50dp"
            android:layout_marginTop="20dp"
            />
        <TextView
            android:id="@+id/category_result"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/img_result"
            app:layout_constraintStart_toEndOf="@id/category"
            android:layout_marginTop="25dp"
            android:layout_marginStart="20dp"
            android:text="Mixed"
            android:gravity="center_horizontal"
            android:textStyle="bold"
            android:textSize="20sp"
            android:textColor="@color/black"
            />
    <LinearLayout
        android:id="@+id/txt_linear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/category"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/difficulty"
            style="@style/secondaryTextstyle"
            android:textSize="17sp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/correctAnswers"
            style="@style/secondaryTextstyle"
            android:textSize="17sp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/result"
            style="@style/secondaryTextstyle"
            android:textSize="17sp"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/result_linear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/txt_linear"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="20dp">
        <TextView
            android:id="@+id/result_difficulty"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="All"
            style="@style/textStyle"
            android:textSize="17sp"
            android:layout_marginStart="25dp"
            />
        <TextView
            android:id="@+id/correct_answers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="8"
            style="@style/textStyle"
            android:textSize="17sp"
            android:layout_marginStart="105dp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="/"
            style="@style/textStyle"
            android:textSize="17sp"
            android:layout_marginStart="5dp"
            />
        <TextView
            android:id="@+id/total_quiestion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="10"
            style="@style/textStyle"
            android:textSize="17sp"
            android:layout_marginStart="5dp"
            />
        <TextView
            android:id="@+id/result"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="80"
            style="@style/textStyle"
            android:textSize="17sp"
            android:layout_marginStart="100dp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="%"
            style="@style/textStyle"
            android:textSize="17sp"/>
    </LinearLayout>

<Button
    android:id="@+id/finish_btn"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/btn_background"
    android:text="@string/finish"
    android:textSize="17sp"
    android:textStyle="bold"
    android:textColor="@color/white"
    android:backgroundTint="@color/green"
    app:layout_constraintTop_toBottomOf="@id/result_linear"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    android:layout_marginTop="170dp"/>

    </androidx.constraintlayout.widget.ConstraintLayout>






